// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Test insertBlocks > Insert column list into paragraph 1`] = `
[
  {
    "children": [
      {
        "children": [],
        "content": [
          {
            "styles": {},
            "text": "Nested Paragraph 0",
            "type": "text",
          },
        ],
        "id": "nested-paragraph-0",
        "props": {
          "backgroundColor": "default",
          "textAlignment": "left",
          "textColor": "default",
        },
        "type": "paragraph",
      },
      {
        "children": [
          {
            "children": [
              {
                "children": [],
                "content": [
                  {
                    "styles": {},
                    "text": "Inserted Column Paragraph",
                    "type": "text",
                  },
                ],
                "id": "2",
                "props": {
                  "backgroundColor": "default",
                  "textAlignment": "left",
                  "textColor": "default",
                },
                "type": "paragraph",
              },
            ],
            "content": undefined,
            "id": "1",
            "props": {
              "width": 1,
            },
            "type": "column",
          },
          {
            "children": [
              {
                "children": [],
                "content": [
                  {
                    "styles": {},
                    "text": "Inserted Column Paragraph",
                    "type": "text",
                  },
                ],
                "id": "4",
                "props": {
                  "backgroundColor": "default",
                  "textAlignment": "left",
                  "textColor": "default",
                },
                "type": "paragraph",
              },
            ],
            "content": undefined,
            "id": "3",
            "props": {
              "width": 1,
            },
            "type": "column",
          },
        ],
        "content": undefined,
        "id": "0",
        "props": {},
        "type": "columnList",
      },
    ],
    "content": [
      {
        "styles": {},
        "text": "Paragraph 0",
        "type": "text",
      },
    ],
    "id": "paragraph-0",
    "props": {
      "backgroundColor": "default",
      "textAlignment": "left",
      "textColor": "default",
    },
    "type": "paragraph",
  },
  {
    "children": [],
    "content": [
      {
        "styles": {},
        "text": "Paragraph 1",
        "type": "text",
      },
    ],
    "id": "paragraph-1",
    "props": {
      "backgroundColor": "default",
      "textAlignment": "left",
      "textColor": "default",
    },
    "type": "paragraph",
  },
  {
    "children": [
      {
        "children": [
          {
            "children": [],
            "content": [
              {
                "styles": {},
                "text": "Column Paragraph 0",
                "type": "text",
              },
            ],
            "id": "column-paragraph-0",
            "props": {
              "backgroundColor": "default",
              "textAlignment": "left",
              "textColor": "default",
            },
            "type": "paragraph",
          },
          {
            "children": [],
            "content": [
              {
                "styles": {},
                "text": "Column Paragraph 1",
                "type": "text",
              },
            ],
            "id": "column-paragraph-1",
            "props": {
              "backgroundColor": "default",
              "textAlignment": "left",
              "textColor": "default",
            },
            "type": "paragraph",
          },
        ],
        "content": undefined,
        "id": "column-0",
        "props": {
          "width": 1,
        },
        "type": "column",
      },
      {
        "children": [
          {
            "children": [],
            "content": [
              {
                "styles": {},
                "text": "Column Paragraph 2",
                "type": "text",
              },
            ],
            "id": "column-paragraph-2",
            "props": {
              "backgroundColor": "default",
              "textAlignment": "left",
              "textColor": "default",
            },
            "type": "paragraph",
          },
          {
            "children": [],
            "content": [
              {
                "styles": {},
                "text": "Column Paragraph 3",
                "type": "text",
              },
            ],
            "id": "column-paragraph-3",
            "props": {
              "backgroundColor": "default",
              "textAlignment": "left",
              "textColor": "default",
            },
            "type": "paragraph",
          },
        ],
        "content": undefined,
        "id": "column-1",
        "props": {
          "width": 1,
        },
        "type": "column",
      },
    ],
    "content": undefined,
    "id": "column-list-0",
    "props": {},
    "type": "columnList",
  },
  {
    "children": [],
    "content": [
      {
        "styles": {},
        "text": "Paragraph 2",
        "type": "text",
      },
    ],
    "id": "paragraph-2",
    "props": {
      "backgroundColor": "default",
      "textAlignment": "left",
      "textColor": "default",
    },
    "type": "paragraph",
  },
  {
    "children": [],
    "content": [],
    "id": "trailing-paragraph",
    "props": {
      "backgroundColor": "default",
      "textAlignment": "left",
      "textColor": "default",
    },
    "type": "paragraph",
  },
]
`;

exports[`Test insertBlocks > Insert column with paragraph into column list 1`] = `
[
  {
    "children": [
      {
        "children": [],
        "content": [
          {
            "styles": {},
            "text": "Nested Paragraph 0",
            "type": "text",
          },
        ],
        "id": "nested-paragraph-0",
        "props": {
          "backgroundColor": "default",
          "textAlignment": "left",
          "textColor": "default",
        },
        "type": "paragraph",
      },
    ],
    "content": [
      {
        "styles": {},
        "text": "Paragraph 0",
        "type": "text",
      },
    ],
    "id": "paragraph-0",
    "props": {
      "backgroundColor": "default",
      "textAlignment": "left",
      "textColor": "default",
    },
    "type": "paragraph",
  },
  {
    "children": [],
    "content": [
      {
        "styles": {},
        "text": "Paragraph 1",
        "type": "text",
      },
    ],
    "id": "paragraph-1",
    "props": {
      "backgroundColor": "default",
      "textAlignment": "left",
      "textColor": "default",
    },
    "type": "paragraph",
  },
  {
    "children": [
      {
        "children": [
          {
            "children": [],
            "content": [
              {
                "styles": {},
                "text": "Inserted Column Paragraph",
                "type": "text",
              },
            ],
            "id": "1",
            "props": {
              "backgroundColor": "default",
              "textAlignment": "left",
              "textColor": "default",
            },
            "type": "paragraph",
          },
        ],
        "content": undefined,
        "id": "0",
        "props": {
          "width": 1,
        },
        "type": "column",
      },
      {
        "children": [
          {
            "children": [],
            "content": [
              {
                "styles": {},
                "text": "Column Paragraph 0",
                "type": "text",
              },
            ],
            "id": "column-paragraph-0",
            "props": {
              "backgroundColor": "default",
              "textAlignment": "left",
              "textColor": "default",
            },
            "type": "paragraph",
          },
          {
            "children": [],
            "content": [
              {
                "styles": {},
                "text": "Column Paragraph 1",
                "type": "text",
              },
            ],
            "id": "column-paragraph-1",
            "props": {
              "backgroundColor": "default",
              "textAlignment": "left",
              "textColor": "default",
            },
            "type": "paragraph",
          },
        ],
        "content": undefined,
        "id": "column-0",
        "props": {
          "width": 1,
        },
        "type": "column",
      },
      {
        "children": [
          {
            "children": [],
            "content": [
              {
                "styles": {},
                "text": "Column Paragraph 2",
                "type": "text",
              },
            ],
            "id": "column-paragraph-2",
            "props": {
              "backgroundColor": "default",
              "textAlignment": "left",
              "textColor": "default",
            },
            "type": "paragraph",
          },
          {
            "children": [],
            "content": [
              {
                "styles": {},
                "text": "Column Paragraph 3",
                "type": "text",
              },
            ],
            "id": "column-paragraph-3",
            "props": {
              "backgroundColor": "default",
              "textAlignment": "left",
              "textColor": "default",
            },
            "type": "paragraph",
          },
        ],
        "content": undefined,
        "id": "column-1",
        "props": {
          "width": 1,
        },
        "type": "column",
      },
    ],
    "content": undefined,
    "id": "column-list-0",
    "props": {},
    "type": "columnList",
  },
  {
    "children": [],
    "content": [
      {
        "styles": {},
        "text": "Paragraph 2",
        "type": "text",
      },
    ],
    "id": "paragraph-2",
    "props": {
      "backgroundColor": "default",
      "textAlignment": "left",
      "textColor": "default",
    },
    "type": "paragraph",
  },
  {
    "children": [],
    "content": [],
    "id": "trailing-paragraph",
    "props": {
      "backgroundColor": "default",
      "textAlignment": "left",
      "textColor": "default",
    },
    "type": "paragraph",
  },
]
`;

exports[`Test insertBlocks > Insert paragraph into column 1`] = `
[
  {
    "children": [
      {
        "children": [],
        "content": [
          {
            "styles": {},
            "text": "Nested Paragraph 0",
            "type": "text",
          },
        ],
        "id": "nested-paragraph-0",
        "props": {
          "backgroundColor": "default",
          "textAlignment": "left",
          "textColor": "default",
        },
        "type": "paragraph",
      },
    ],
    "content": [
      {
        "styles": {},
        "text": "Paragraph 0",
        "type": "text",
      },
    ],
    "id": "paragraph-0",
    "props": {
      "backgroundColor": "default",
      "textAlignment": "left",
      "textColor": "default",
    },
    "type": "paragraph",
  },
  {
    "children": [],
    "content": [
      {
        "styles": {},
        "text": "Paragraph 1",
        "type": "text",
      },
    ],
    "id": "paragraph-1",
    "props": {
      "backgroundColor": "default",
      "textAlignment": "left",
      "textColor": "default",
    },
    "type": "paragraph",
  },
  {
    "children": [
      {
        "children": [
          {
            "children": [],
            "content": [
              {
                "styles": {},
                "text": "Column Paragraph 0",
                "type": "text",
              },
            ],
            "id": "column-paragraph-0",
            "props": {
              "backgroundColor": "default",
              "textAlignment": "left",
              "textColor": "default",
            },
            "type": "paragraph",
          },
          {
            "children": [],
            "content": [
              {
                "styles": {},
                "text": "Inserted Column List Paragraph",
                "type": "text",
              },
            ],
            "id": "0",
            "props": {
              "backgroundColor": "default",
              "textAlignment": "left",
              "textColor": "default",
            },
            "type": "paragraph",
          },
          {
            "children": [],
            "content": [
              {
                "styles": {},
                "text": "Column Paragraph 1",
                "type": "text",
              },
            ],
            "id": "column-paragraph-1",
            "props": {
              "backgroundColor": "default",
              "textAlignment": "left",
              "textColor": "default",
            },
            "type": "paragraph",
          },
        ],
        "content": undefined,
        "id": "column-0",
        "props": {
          "width": 1,
        },
        "type": "column",
      },
      {
        "children": [
          {
            "children": [],
            "content": [
              {
                "styles": {},
                "text": "Column Paragraph 2",
                "type": "text",
              },
            ],
            "id": "column-paragraph-2",
            "props": {
              "backgroundColor": "default",
              "textAlignment": "left",
              "textColor": "default",
            },
            "type": "paragraph",
          },
          {
            "children": [],
            "content": [
              {
                "styles": {},
                "text": "Column Paragraph 3",
                "type": "text",
              },
            ],
            "id": "column-paragraph-3",
            "props": {
              "backgroundColor": "default",
              "textAlignment": "left",
              "textColor": "default",
            },
            "type": "paragraph",
          },
        ],
        "content": undefined,
        "id": "column-1",
        "props": {
          "width": 1,
        },
        "type": "column",
      },
    ],
    "content": undefined,
    "id": "column-list-0",
    "props": {},
    "type": "columnList",
  },
  {
    "children": [],
    "content": [
      {
        "styles": {},
        "text": "Paragraph 2",
        "type": "text",
      },
    ],
    "id": "paragraph-2",
    "props": {
      "backgroundColor": "default",
      "textAlignment": "left",
      "textColor": "default",
    },
    "type": "paragraph",
  },
  {
    "children": [],
    "content": [],
    "id": "trailing-paragraph",
    "props": {
      "backgroundColor": "default",
      "textAlignment": "left",
      "textColor": "default",
    },
    "type": "paragraph",
  },
]
`;

exports[`Test insertBlocks > Insert valid column list with two columns 1`] = `
[
  {
    "children": [
      {
        "children": [],
        "content": [
          {
            "styles": {},
            "text": "Nested Paragraph 0",
            "type": "text",
          },
        ],
        "id": "nested-paragraph-0",
        "props": {
          "backgroundColor": "default",
          "textAlignment": "left",
          "textColor": "default",
        },
        "type": "paragraph",
      },
    ],
    "content": [
      {
        "styles": {},
        "text": "Paragraph 0",
        "type": "text",
      },
    ],
    "id": "paragraph-0",
    "props": {
      "backgroundColor": "default",
      "textAlignment": "left",
      "textColor": "default",
    },
    "type": "paragraph",
  },
  {
    "children": [
      {
        "children": [
          {
            "children": [],
            "content": [
              {
                "styles": {},
                "text": "Inserted Column Paragraph",
                "type": "text",
              },
            ],
            "id": "2",
            "props": {
              "backgroundColor": "default",
              "textAlignment": "left",
              "textColor": "default",
            },
            "type": "paragraph",
          },
        ],
        "content": undefined,
        "id": "1",
        "props": {
          "width": 1,
        },
        "type": "column",
      },
      {
        "children": [
          {
            "children": [],
            "content": [
              {
                "styles": {},
                "text": "Inserted Second Column Paragraph",
                "type": "text",
              },
            ],
            "id": "4",
            "props": {
              "backgroundColor": "default",
              "textAlignment": "left",
              "textColor": "default",
            },
            "type": "paragraph",
          },
        ],
        "content": undefined,
        "id": "3",
        "props": {
          "width": 1,
        },
        "type": "column",
      },
    ],
    "content": undefined,
    "id": "0",
    "props": {},
    "type": "columnList",
  },
  {
    "children": [],
    "content": [
      {
        "styles": {},
        "text": "Paragraph 1",
        "type": "text",
      },
    ],
    "id": "paragraph-1",
    "props": {
      "backgroundColor": "default",
      "textAlignment": "left",
      "textColor": "default",
    },
    "type": "paragraph",
  },
  {
    "children": [
      {
        "children": [
          {
            "children": [],
            "content": [
              {
                "styles": {},
                "text": "Column Paragraph 0",
                "type": "text",
              },
            ],
            "id": "column-paragraph-0",
            "props": {
              "backgroundColor": "default",
              "textAlignment": "left",
              "textColor": "default",
            },
            "type": "paragraph",
          },
          {
            "children": [],
            "content": [
              {
                "styles": {},
                "text": "Column Paragraph 1",
                "type": "text",
              },
            ],
            "id": "column-paragraph-1",
            "props": {
              "backgroundColor": "default",
              "textAlignment": "left",
              "textColor": "default",
            },
            "type": "paragraph",
          },
        ],
        "content": undefined,
        "id": "column-0",
        "props": {
          "width": 1,
        },
        "type": "column",
      },
      {
        "children": [
          {
            "children": [],
            "content": [
              {
                "styles": {},
                "text": "Column Paragraph 2",
                "type": "text",
              },
            ],
            "id": "column-paragraph-2",
            "props": {
              "backgroundColor": "default",
              "textAlignment": "left",
              "textColor": "default",
            },
            "type": "paragraph",
          },
          {
            "children": [],
            "content": [
              {
                "styles": {},
                "text": "Column Paragraph 3",
                "type": "text",
              },
            ],
            "id": "column-paragraph-3",
            "props": {
              "backgroundColor": "default",
              "textAlignment": "left",
              "textColor": "default",
            },
            "type": "paragraph",
          },
        ],
        "content": undefined,
        "id": "column-1",
        "props": {
          "width": 1,
        },
        "type": "column",
      },
    ],
    "content": undefined,
    "id": "column-list-0",
    "props": {},
    "type": "columnList",
  },
  {
    "children": [],
    "content": [
      {
        "styles": {},
        "text": "Paragraph 2",
        "type": "text",
      },
    ],
    "id": "paragraph-2",
    "props": {
      "backgroundColor": "default",
      "textAlignment": "left",
      "textColor": "default",
    },
    "type": "paragraph",
  },
  {
    "children": [],
    "content": [],
    "id": "trailing-paragraph",
    "props": {
      "backgroundColor": "default",
      "textAlignment": "left",
      "textColor": "default",
    },
    "type": "paragraph",
  },
]
`;
